<resources>
    <string name="app_name">Capstone2</string>
    <string name="eemail">Email</string>
    <string name="epass">Password</string>
    <string name="tLogin">LOGIN</string>
    <string name="register">Register</string>
    <string name="ename">Masukkan Nama</string>
    <string name="edmail">Masukkan Email</string>
    <string name="edpass">Masukkan Password</string>
    <string name="save">Simpan</string>
    <string name="edprofile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="profil">Profil</string>
    <string name="latihan">Judul Latihan</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="btn_string_schedule">Schedule</string>
    <string name="btn_string_home">Home</string>
    <string name="btn_string_cal">Food Calories</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="list_array">
        <item>Pilih...</item>
        <item>Push-Up</item>
        <item>Sit-Up</item>
        <item>Squad Jump</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>