<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:name="com.example.schedule.FoodCaloriesActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/retange"
        android:elevation="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_toolbarTitle"
            android:text="LIFETHY"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <ImageButton
            android:id="@+id/btnprof"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="250dp"
            android:contentDescription="@string/profil"
            android:background="@drawable/profile"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/img_benner"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bannerfood"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-20dp"
        />

    <ImageView
        android:id="@+id/btn_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_search_24"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_benner"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/grey"
        />



    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_listfoodcalories"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        app:layout_constraintTop_toTopOf="@id/btn_search"
        app:layout_constraintBottom_toBottomOf="@id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Search..."
        android:paddingLeft="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:layout_marginBottom="-5dp"
        android:layout_marginTop="8dp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:elevation="10dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_navbar">

            <!--  SCHEDULE  -->
            <LinearLayout
                android:id="@+id/schedule_btn"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/news_btn"
                app:layout_constraintTop_toTopOf="@id/news_btn"
                app:layout_constraintBottom_toBottomOf="@id/news_btn"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/schedule"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-15dp"
                    android:layout_marginStart="1dp"
                    android:text="@string/btn_string_schedule"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    />

            </LinearLayout>

            <!--  HOME  -->
            <LinearLayout
                android:id="@+id/news_btn"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home"
                    android:layout_marginTop="-5dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-15dp"
                    android:layout_marginStart="1dp"
                    android:text="@string/btn_string_home"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <!--  NAVBAR CALORIES  -->
            <LinearLayout
                android:id="@+id/foodcalbtn"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/news_btn"
                app:layout_constraintTop_toTopOf="@id/news_btn"
                app:layout_constraintBottom_toBottomOf="@id/news_btn"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cal"
                    android:layout_marginTop="-8dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-15dp"
                    android:layout_marginStart="1dp"
                    android:text="@string/btn_string_cal"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>