<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/retange"
        android:elevation="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_toolbarTitle"
            android:text="LIFETHY"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <ImageButton
            android:id="@+id/btnprof"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="250dp"
            android:contentDescription="@string/profil"
            android:background="@drawable/profile"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/daftarlatihan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="Schedule"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <!--  NAVBAR  -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:elevation="10dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_navbar">

            <!--  SCHEDULE  -->
            <LinearLayout
                android:id="@+id/schedule_btn"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/news_btn"
                app:layout_constraintTop_toTopOf="@id/news_btn"
                app:layout_constraintBottom_toBottomOf="@id/news_btn"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/schedule"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-15dp"
                    android:layout_marginStart="1dp"
                    android:text="@string/btn_string_schedule"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    />

            </LinearLayout>

            <!--  HOME  -->
            <LinearLayout
                android:id="@+id/news_btn"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home"
                    android:layout_marginTop="-5dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-15dp"
                    android:layout_marginStart="1dp"
                    android:text="@string/btn_string_home"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <!--  NAVBAR CALORIES  -->
            <LinearLayout
                android:id="@+id/foodcalbtn"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/news_btn"
                app:layout_constraintTop_toTopOf="@id/news_btn"
                app:layout_constraintBottom_toBottomOf="@id/news_btn"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cal"
                    android:layout_marginTop="-8dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-15dp"
                    android:layout_marginStart="1dp"
                    android:text="@string/btn_string_cal"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="411dp"
        android:layout_height="511dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daftarlatihan"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Other layout elements above this -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="104dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="Tambahkan Jadwal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="104dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_recent_history"
        android:contentDescription="Lihat Riwayat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Other layout elements below this -->


</androidx.constraintlayout.widget.ConstraintLayout>